refactor(device): arrange device functions